--- a/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
+++ b/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
@@ -164,6 +164,7 @@
         placeholder="Confirm user's password"
         #confirmPassword="ngModel"
         [(ngModel)]="userInfo.confirmPassword"
+        withoutValidationErrors
       />
     </div>
   </fieldset>
