style(animations): change series layout

--- a/signals/src/app/animations/series/series.component.html
+++ b/signals/src/app/animations/series/series.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf='items$ | async as items'>
-  <div class='flex flex-wrap w-[1200px] m-auto' [@rotateInStaggeredAnimation]='items.length'>
+  <div class='flex flex-wrap w-[64rem]' [@rotateInStaggeredAnimation]='items.length'>
     <div *ngFor='let item of items; trackBy: trackByFn'
          class='bg-gray-300 text-white text-lg flex items-center justify-center h-[10rem] w-[15rem] mr-2 mb-2'>
       {{item}}
