style(themes): add banner theme

--- a/signals/src/app/theming/theming.component.html
+++ b/signals/src/app/theming/theming.component.html
@@ -9,6 +9,7 @@
   </button>
 </mat-toolbar>
 <main class='p-10 box-border'>
+  <app-banner message='This component will get own theme' />
   <section class='mb-10'>
     <mat-form-field class='mr-5'>
       <mat-label>Choose an option</mat-label>
